[gd_scene load_steps=22 format=4 uid="uid://bpg51jglltuh1"]

[ext_resource type="Script" uid="uid://ci0wa6rx73a62" path="res://scenes/paddle.gd" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://co32wlghkwbk0" path="res://scenes/main.gd" id="1_85g3d"]
[ext_resource type="Texture2D" uid="uid://o0vr1m8rrcx6" path="res://assets/sprites/paddle.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://b36jehnacwdny" path="res://scenes/ball.gd" id="3_jyhfs"]
[ext_resource type="Texture2D" uid="uid://ybuosb1md5w5" path="res://assets/sprites/ball.png" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://dbxe81yfr65mb" path="res://scenes/block.tscn" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cqatyn18be1fm" path="res://scenes/rectangle.tscn" id="6_tipki"]
[ext_resource type="PackedScene" uid="uid://bg0yjqw2o3u42" path="res://scenes/rotated_square.tscn" id="7_85g3d"]
[ext_resource type="PackedScene" uid="uid://b4fbqn1iuids5" path="res://scenes/circle.tscn" id="8_choun"]
[ext_resource type="Texture2D" uid="uid://dcko5h4xyo3hd" path="res://assets/sprites/ui_9_patch.png" id="10_choun"]
[ext_resource type="FontFile" uid="uid://5gg2eq2p5xkt" path="res://assets/fonts/kenney_space.ttf" id="11_ya4ey"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_sgp6g"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_o5qli"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0wfyh"]
normal = Vector2(0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(48, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefeu"]
size = Vector2(40, 24)

[sub_resource type="CircleShape2D" id="CircleShape2D_jyhfs"]
radius = 15.0

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_tipki"]
scenes/1/scene = ExtResource("5_tbgi4")
scenes/2/scene = ExtResource("8_choun")
scenes/3/scene = ExtResource("6_tipki")
scenes/4/scene = ExtResource("7_85g3d")

[sub_resource type="TileSet" id="TileSet_85g3d"]
tile_size = Vector2i(48, 48)
sources/0 = SubResource("TileSetScenesCollectionSource_tipki")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tipki"]

[sub_resource type="LabelSettings" id="LabelSettings_eb6dy"]
font = ExtResource("11_ya4ey")
font_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
script = ExtResource("1_85g3d")

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("WorldBoundaryShape2D_sgp6g")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(768, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("WorldBoundaryShape2D_o5qli")

[node name="Ceiling" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("WorldBoundaryShape2D_0wfyh")

[node name="Paddle" type="CharacterBody2D" parent="."]
position = Vector2(384, 624)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_0wfyh")

[node name="Sprite2D" type="Sprite2D" parent="Paddle"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_o5qli")

[node name="CenterCollision" type="CollisionShape2D" parent="Paddle"]
shape = SubResource("RectangleShape2D_tbgi4")

[node name="RightCollision" type="CollisionShape2D" parent="Paddle"]
position = Vector2(42, 2)
rotation = 0.174533
shape = SubResource("RectangleShape2D_tefeu")

[node name="LeftCollision" type="CollisionShape2D" parent="Paddle"]
position = Vector2(-42, 2)
rotation = -0.174533
shape = SubResource("RectangleShape2D_tefeu")

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Paddle"]
position = Vector2(0, -30)
remote_path = NodePath("../../Ball")
update_rotation = false
update_scale = false

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(384, 594)
collision_layer = 3
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("3_jyhfs")

[node name="Sprite2D" type="Sprite2D" parent="Ball"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_sugp2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("CircleShape2D_jyhfs")

[node name="Level" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAMAAAAAAAAAAQACAAQAAAAAAAAAAQACAAUAAAAAAAAAAQACAAYAAAAAAAAAAQACAAcAAAAAAAAAAQANAAIAAAAAAAAABAAMAAIAAAAAAAAAAwALAAIAAAAAAAAAAwAKAAIAAAAAAAAAAwAJAAIAAAAAAAAAAwAIAAIAAAAAAAAAAwAHAAIAAAAAAAAAAwAGAAIAAAAAAAAAAwAFAAIAAAAAAAAAAwAEAAIAAAAAAAAAAwADAAIAAAAAAAAAAwACAAIAAAAAAAAABAANAAMAAAAAAAAAAQANAAQAAAAAAAAAAQANAAUAAAAAAAAAAQANAAYAAAAAAAAAAQANAAcAAAAAAAAAAQAEAAQAAAAAAAAAAgALAAQAAAAAAAAAAgAGAAUAAAAAAAAAAgAJAAUAAAAAAAAAAgAFAAUAAAAAAAAAAwAKAAUAAAAAAAAAAwAHAAQAAAAAAAAABAAIAAQAAAAAAAAABAAEAAYAAAAAAAAAAgALAAYAAAAAAAAAAgACAAgAAAAAAAAABAAMAAgAAAAAAAAAAwANAAgAAAAAAAAABAADAAgAAAAAAAAAAwAEAAgAAAAAAAAAAwALAAgAAAAAAAAAAwAKAAgAAAAAAAAAAwAFAAgAAAAAAAAAAwAGAAgAAAAAAAAAAQAJAAgAAAAAAAAAAQA=")
tile_set = SubResource("TileSet_85g3d")

[node name="DeadZone" type="Area2D" parent="."]
position = Vector2(0, 680)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadZone"]
shape = SubResource("WorldBoundaryShape2D_tipki")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
custom_minimum_size = Vector2(384, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="NinePatchRect" type="NinePatchRect" parent="UI/MarginContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("10_choun")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 18
patch_margin_top = 18
patch_margin_right = 18
patch_margin_bottom = 18

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Single PaddleBall"
label_settings = SubResource("LabelSettings_eb6dy")
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Score"
label_settings = SubResource("LabelSettings_eb6dy")
horizontal_alignment = 1

[node name="Score" type="Label" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_eb6dy")
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "High Score"
label_settings = SubResource("LabelSettings_eb6dy")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_eb6dy")
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="LivesLabel" type="Label" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Lives"
label_settings = SubResource("LabelSettings_eb6dy")
horizontal_alignment = 1

[node name="LifeIcon" type="CenterContainer" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LifeIcon" type="TextureRect" parent="UI/MarginContainer/MarginContainer/VBoxContainer/LifeIcon"]
custom_minimum_size = Vector2(80, 17.5)
layout_mode = 2
texture = ExtResource("1_o5qli")
expand_mode = 1

[node name="LifeIcon2" type="CenterContainer" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LifeIcon" type="TextureRect" parent="UI/MarginContainer/MarginContainer/VBoxContainer/LifeIcon2"]
custom_minimum_size = Vector2(80, 17.5)
layout_mode = 2
texture = ExtResource("1_o5qli")
expand_mode = 1

[node name="LifeIcon3" type="CenterContainer" parent="UI/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LifeIcon" type="TextureRect" parent="UI/MarginContainer/MarginContainer/VBoxContainer/LifeIcon3"]
custom_minimum_size = Vector2(80, 17.5)
layout_mode = 2
texture = ExtResource("1_o5qli")
expand_mode = 1
